feat: style offers and reservation sections

--- a/index.html
+++ b/index.html
@@ -317,9 +317,7 @@
                 </div>
             </div>
         </div>
-        <div class="testimonial__img">
-            <!-- <img src="./assets/images/testimonial-img.jpg" alt="cozy lights"> -->
-        </div>
+        <div class="testimonial__img"></div>
     </section>
 
 
@@ -335,32 +333,32 @@
             </div>
 
             <div class="offers__block">
-                <div class="offer-card">
-                    <div class="offer-card__price">
-                        <span>Only</span>
-                        <span>10$</span>
-                    </div>
-                    <div class="offer-card__text">
-                        <span>50% Offer Going</span>
+                <div class="offer">
+                    <div class="section-heading offer__text">
+                        <div class="offer__price">
+                            <span>Only</span>
+                            <span>10$</span>
+                        </div>
+                        <span class="section-heading__title">50% Offer Going</span>
                         <h3>Chicken Burger</h3>
                         <p>Chicken burger with the tasty toppings and leaves.</p>
                     </div>
-                    <div class="offer-card__img">
+                    <div class="offer__img">
                         <img src="./assets/images/offers-burger-img.png" alt="tasty burger">
                     </div>
                 </div>
 
-                <div class="offer-card">
-                    <div class="offer-card__price">
-                        <span>Only</span>
-                        <span>9$</span>
-                    </div>
-                    <div class="offer-card__text">
-                        <span>50% Offer Going</span>
+                <div class="offer">
+                    <div class="section-heading offer__text">
+                        <div class="offer__price">
+                            <span>Only</span>
+                            <span>9$</span>
+                        </div>
+                        <span class="section-heading__title">50% Offer Going</span>
                         <h3>Chicken Pizza</h3>
                         <p>Pizza with multiple flavor and the toping are mixed.</p>
                     </div>
-                    <div class="offer-card__img">
+                    <div class="offer__img">
                         <img src="./assets/images/offers-pizza-img.png" alt="tasty pizza">
                     </div>
                 </div>
@@ -373,38 +371,47 @@
     <section class="gallery-bg">
         <div class="container gallery">
             <div class="section-heading gallery__heading">
-                <span class="section-heading__title">Galery</span>
+                <span class="section-heading__title">Gallery</span>
                 <h2>Popular Dishes</h2>
-                <p>There is a game between the waiters in restaurant to see who serves the food to each table fastest.
+                <p class="segment__text">There is a game between the waiters in restaurant to see who serves the food to
+                    each table fastest.
                     That led to attempting the Guinness Record.</p>
             </div>
 
             <div class="gallery__block">
-                <div class="gallery__card card">
-                    <img src="./assets/images/dishes-img-01.jpg" alt="Chicken Manjoori">
-                    <h4>Chicken Manjoori</h4>
-                    <span>$15</span>
-                    <p>Dish relished by all age groups as a starter dish at parties.</p>
+                <div class="gallery__segment segment">
+                    <img src="./assets/images/dishes-img-01.jpg" class="segment__img" alt="Chicken Manjoori">
+                    <div class="segment__title">
+                        <h4>Chicken Manjoori</h4>
+                        <span>$15</span>
+                    </div>
+                    <p class="segment__text">Dish relished by all age groups as a starter dish at parties.</p>
                 </div>
 
-                <div class="gallery__card card">
-                    <img src="./assets/images/dishes-img-02.jpg" alt="Hotdog">
-                    <h4>Hotdog</h4>
-                    <span>$10</span>
-                    <p>Grilled sausage served in the slit of a partially sliced bun.</p>
+                <div class="gallery__segment segment">
+                    <img src="./assets/images/dishes-img-02.jpg" class="segment__img" alt="Hotdog">
+                    <div class="segment__title">
+                        <h4>Hotdog</h4>
+                        <span>$10</span>
+                    </div>
+                    <p class="segment__text">Grilled sausage served in the slit of a partially sliced bun.</p>
                 </div>
 
-                <div class="gallery__card card">
-                    <img src="./assets/images/dishes-img-03.jpg" alt="Fresh Salmon">
-                    <h4>Fresh Salmon</h4>
-                    <span>$5</span>
-                    <p>Beat the health blues with our Super Immune Blue Juice Recipe.</p>
+                <div class="gallery__segment segment">
+                    <img src="./assets/images/dishes-img-03.jpg" class="segment__img" alt="Fresh Salmon">
+                    <div class="segment__title">
+                        <h4>Fresh Salmon</h4>
+                        <span>$5</span>
+                    </div>
+                    <p class="segment__text">Beat the health blues with our Super Immune Blue Juice Recipe.</p>
                 </div>
 
-                <div class="gallery__card card">
-                    <img src="./assets/images/dishes-img-04.jpg" alt="Veg Burger">
-                    <h4>Veg Burger</h4>
-                    <span>$10</span>
+                <div class="gallery__segment segment">
+                    <img src="./assets/images/dishes-img-04.jpg" class="segment__img" alt="Veg Burger">
+                    <div class="segment__title">
+                        <h4>Veg Burger</h4>
+                        <span>$10</span>
+                    </div>
                     <p>Burgers may be made from ingredients like beans.</p>
                 </div>
             </div>
@@ -456,14 +463,12 @@
                 <div class="blog__preview preview">
                     <div class="preview__btn">
                         <img src="./assets/images/blog-img-01.jpg" alt="pizza">
-                        <button class="btn--color">View More</button>
+                        <button class="btn btn--color">View More</button>
                     </div>
-                    <div class="preview__tags">
-                        <span class="accent-title">Delicious</span>
-                        <span class="accent-title">March 19, 2022</span>
-                    </div>
-                    <div class="preview__text">
-                        <h3>The Legend of US Cuisine: The Story of Hungry People</h3>
+                    <div class="section-heading preview__text">
+                        <span class="section-heading__title">Delicious</span
+                        ><span class="section-heading__title">March 19, 2022</span>
+                        <h2>The Legend of US Cuisine: The Story of Hungry People</h2>
                         <p>Capitalize on low-hanging fruit to identify a ballpark value added matrix economically and
                             the creative activity to beta test override the food quality.</p>
                     </div>
@@ -472,14 +477,12 @@
                 <div class="blog__preview preview">
                     <div class="preview__btn">
                         <img src="./assets/images/blog-img-02.jpg" alt="barbecue">
-                        <button class="btn--color">View More</button>
+                        <button class="btn btn--color">View More</button>
                     </div>
-                    <div class="preview__tags">
-                        <span class="accent-title">Cooking</span>
-                        <span class="accent-title">March 19, 2022</span>
-                    </div>
-                    <div class="preview__text">
-                        <h3>The Most Popular Delicious Food of Mediterranean Cuisine</h3>
+                    <div class="section-heading preview__text">
+                        <span class="section-heading__title">Cooking</span
+                        ><span class="section-heading__title">March 19, 2022</span>
+                        <h2>The Most Popular Delicious Food of Mediterranean Cuisine</h2>
                         <p>Strategies on low-hanging fruit to identify a ballpark value added matrix economically and
                             the creative activity to beta test override the food quality.</p>
                     </div>
@@ -494,11 +497,11 @@
         <div class="container">
             <div class="reservation">
                 <span class="section-heading__title">Reservation</span>
-                <form action="#">
+                <form class="reservation__form form" action="#">
                     <legend>Book Your Table</legend>
                     <input type="text" name="text" id="#" placeholder="Name">
                     <input type="email" name="email" id="#" placeholder="Email">
-                    <input type="text" name="text" id="#" placeholder="Person">
+                    <input type="text" name="text" id="#" placeholder="Persons">
                     <input type="datetime" name="datetime" id="#" placeholder="Timing">
                     <input type="date" name="date" id="#" placeholder="Date">
                     <input type="submit" value="Book A Table">
