feat: make reservation section responsive

--- a/index.html
+++ b/index.html
@@ -501,8 +501,7 @@
                     <legend>Book Your Table</legend>
                     <input type="text" name="text" id="#" placeholder="Name">
                     <input type="email" name="email" id="#" placeholder="Email">
-                    <input type="text" name="text" id="#" placeholder="Persons">
-                    <input type="datetime" name="datetime" id="#" placeholder="Timing">
+                    <input type="number" name="number" id="#" min="1" max="50" step="1" placeholder="Persons">
                     <input type="date" name="date" id="#" placeholder="Date">
                     <input type="submit" value="Book A Table">
                 </form>
