refactor: code review header, hero, info and storytlling sections

--- a/index.html
+++ b/index.html
@@ -80,26 +80,32 @@
                 <div class="information__icon">
                     <img src="./assets/icons/locate-point.png" alt="local point">
                 </div>
-                <h4>Locate Us</h4>
-                <span>
-                    <a href="https://goo.gl/maps/dAXusTSXBEw541JV8">Riverside 25, San Diego, California</a>
-                </span>
+                <div class="information__text">
+                    <h4>Locate Us</h4>
+                    <span>
+                        <a href="https://goo.gl/maps/dAXusTSXBEw541JV8">Riverside 25, San Diego, California</a>
+                    </span>
+                </div>
             </div>
             <div class="information__block">
                 <div class="information__icon">
                     <img src="./assets/icons/open-time.png" alt="open time">
                 </div>
-                <h4>Open Hours</h4>
-                <span>Mon To Fri 9:00 AM - 9:00 PM</span>
+                <div class="information__text">
+                    <h4>Open Hours</h4>
+                    <span>Mon To Fri 9:00 AM - 9:00 PM</span>
+                </div>
             </div>
             <div class="information__block">
                 <div class="information__icon">
                     <img src="./assets/icons/reservation.png" alt="reservation">
                 </div>
-                <h4>Reservation</h4>
-                <span>
-                    <a href="mailto:restaurantate@gmail.com">rest@gmail.com</a>
-                </span>
+                <div class="information__text">
+                    <h4>Reservation</h4>
+                    <span>
+                        <a href="mailto:restaurantate@gmail.com">rest@gmail.com</a>
+                    </span>
+                </div>
             </div>
         </div>
     </section>
