refactor: code review menu, offers, gallery and testimonal sections

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
 
     <section class="menu-bg">
         <div class="container menu">
-            <div class="menu__card card">
-                <div class="section-heading card__heading">
+            <div class="menu__card">
+                <div class="section-heading menu__heading">
                     <span class="section-heading__title">Menu</span>
                     <h2>Try Our Special dishes</h2>
                     <p>Every time you perfectly dine with us, it should happy for great inspired food in an environment
                         designed with individual touches unique to the local area.</p>
                 </div>
-                <img src="./assets/images/menu-img.jpg" class="card__img" alt="apricot pie">
+                <img src="./assets/images/menu-img.jpg" class="menu__img" alt="apricot pie">
                 <div class="card__btn">
                     <button class="btn btn--border">See all dishes</button>
                 </div>
@@ -339,9 +339,9 @@
             </div>
 
             <div class="offers__block">
-                <div class="offer">
-                    <div class="section-heading offer__text">
-                        <div class="offer__price">
+                <div class="offers__deal">
+                    <div class="section-heading offers__text">
+                        <div class="offers__price">
                             <span>Only</span>
                             <span>10$</span>
                         </div>
@@ -349,14 +349,14 @@
                         <h3>Chicken Burger</h3>
                         <p>Chicken burger with the tasty toppings and leaves.</p>
                     </div>
-                    <div class="offer__img">
+                    <div class="offers__img">
                         <img src="./assets/images/offers-burger-img.png" alt="tasty burger">
                     </div>
                 </div>
 
-                <div class="offer">
-                    <div class="section-heading offer__text">
-                        <div class="offer__price">
+                <div class="offers__deal">
+                    <div class="section-heading offers__text">
+                        <div class="offers__price">
                             <span>Only</span>
                             <span>9$</span>
                         </div>
@@ -364,7 +364,7 @@
                         <h3>Chicken Pizza</h3>
                         <p>Pizza with multiple flavor and the toping are mixed.</p>
                     </div>
-                    <div class="offer__img">
+                    <div class="offers__img">
                         <img src="./assets/images/offers-pizza-img.png" alt="tasty pizza">
                     </div>
                 </div>
@@ -379,46 +379,62 @@
             <div class="section-heading gallery__heading">
                 <span class="section-heading__title">Gallery</span>
                 <h2>Popular Dishes</h2>
-                <p class="segment__text">There is a game between the waiters in restaurant to see who serves the food to
+                <p>There is a game between the waiters in restaurant to see who serves the food to
                     each table fastest.
                     That led to attempting the Guinness Record.</p>
             </div>
 
             <div class="gallery__block">
-                <div class="gallery__segment segment">
-                    <img src="./assets/images/dishes-img-01.jpg" class="segment__img" alt="Chicken Manjoori">
-                    <div class="segment__title">
-                        <h4>Chicken Manjoori</h4>
-                        <span>$15</span>
+                <div class="gallery__card">
+                    <div class="gallery__img">
+                        <img src="./assets/images/dishes-img-01.jpg" alt="Chicken Manjoori">
                     </div>
-                    <p class="segment__text">Dish relished by all age groups as a starter dish at parties.</p>
+                    <div class="gallery__text">
+                        <div class="gallery__title">
+                            <h4>Chicken Manjoori</h4>
+                            <span>$15</span>
+                        </div>
+                        <p>Dish relished by all age groups as a starter dish at parties.</p>
+                    </div>
                 </div>
 
-                <div class="gallery__segment segment">
-                    <img src="./assets/images/dishes-img-02.jpg" class="segment__img" alt="Hotdog">
-                    <div class="segment__title">
-                        <h4>Hotdog</h4>
-                        <span>$10</span>
+                <div class="gallery__card">
+                    <div class="gallery__img">
+                        <img src="./assets/images/dishes-img-02.jpg" alt="Hotdog">
                     </div>
-                    <p class="segment__text">Grilled sausage served in the slit of a partially sliced bun.</p>
+                    <div class="gallery__text">
+                        <div class="gallery__title">
+                            <h4>Hotdog</h4>
+                            <span>$10</span>
+                        </div>
+                        <p>Grilled sausage served in the slit of a partially sliced bun.</p>
+                    </div>
                 </div>
 
-                <div class="gallery__segment segment">
-                    <img src="./assets/images/dishes-img-03.jpg" class="segment__img" alt="Fresh Salmon">
-                    <div class="segment__title">
-                        <h4>Fresh Salmon</h4>
-                        <span>$5</span>
+                <div class="gallery__card">
+                    <div class="gallery__img">
+                        <img src="./assets/images/dishes-img-03.jpg" alt="Fresh Salmon">
                     </div>
-                    <p class="segment__text">Beat the health blues with our Super Immune Blue Juice Recipe.</p>
+                    <div class="gallery__text">
+                        <div class="gallery__title">
+                            <h4>Fresh Salmon</h4>
+                            <span>$5</span>
+                        </div>
+                        <p>Beat the health blues with our Super Immune Blue Juice Recipe.</p>
+                    </div>
                 </div>
 
-                <div class="gallery__segment segment">
-                    <img src="./assets/images/dishes-img-04.jpg" class="segment__img" alt="Veg Burger">
-                    <div class="segment__title">
-                        <h4>Veg Burger</h4>
-                        <span>$10</span>
+                <div class="gallery__card">
+                    <div class="gallery__img">
+                        <img src="./assets/images/dishes-img-04.jpg" alt="Veg Burger">
                     </div>
-                    <p>Burgers may be made from ingredients like beans.</p>
+                    <div class="gallery__text">
+                        <div class="gallery__title">
+                            <h4>Veg Burger</h4>
+                            <span>$10</span>
+                        </div>
+                        <p>Burgers may be made from ingredients like beans.</p>
+                    </div>
                 </div>
             </div>
 
