--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             </div>
 
             <div class="header__nav">
-                <button class="hamburger-menu-toggle"><span
-                        class="visually-hidden">Menu</span></button>
+                <button class="hamburger-menu-toggle"><span class="visually-hidden">Menu</span></button>
                 <nav class="nav" id="header-navigation">
                     <ul class="nav__list">
                         <li><a href="#header" class="nav__link">Home</a></li>
@@ -271,62 +270,70 @@
                 <p>We love to hear from customers, so please leave a comment or say hello in an email.</p>
             </div>
 
-            <div class="testimonial__block">
-                <div class="testimonial__card">
-                    <div class="testimonial__autor autor">
-                        <div class="autor__photo">
-                            <img src="./assets/images/testimonial-autor-01.png" alt="Natasha D photo">
+            <div class="itc-slider" data-slider="itc-slider" data-loop="true">
+                <div class="itc-slider-wrapper">
+                    <div class="testimonial__block itc-slider-items">
+                        <div class="testimonial__card itc-slider-item">
+                            <div class="testimonial__autor autor">
+                                <div class="autor__photo">
+                                    <img src="./assets/images/testimonial-autor-01.png" alt="Natasha D photo">
+                                </div>
+                                <div class="autor__name">
+                                    <h4>Natasha D</h4>
+                                    <span>Newyork</span>
+                                </div>
+                            </div>
+                            <div class="testimonial__text">
+                                <p>
+                                    They known for its fabulous taste and food. Anywhere you go your hunger is
+                                    satisfied. The
+                                    best chicken & burgers those are yummy.
+                                </p>
+                            </div>
                         </div>
-                        <div class="autor__name">
-                            <h4>Natasha D</h4>
-                            <span>Newyork</span>
+
+
+                        <div class="testimonial__card itc-slider-item">
+                            <div class="testimonial__autor autor">
+                                <div class="autor__photo">
+                                    <img src="./assets/images/testimonial-autor-02.png" alt="Jack Sparrow photo">
+                                </div>
+                                <div class="autor__name">
+                                    <h4>Jack Sparrow</h4>
+                                    <span>Salt Lake City</span>
+                                </div>
+                            </div>
+                            <div class="testimonial__text">
+                                <p>
+                                    I have visited this fantastic restaurant on several occasions, food is absolutely
+                                    outstanding & attention to detail is in league of its own.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="testimonial__text">
-                        <p>
-                            They known for its fabulous taste and food. Anywhere you go your hunger is satisfied. The
-                            best chicken & burgers those are yummy.
-                        </p>
+
+
+                        <div class="testimonial__card itc-slider-item">
+                            <div class="testimonial__autor autor">
+                                <div class="autor__photo">
+                                    <img src="./assets/images/testimonial-autor-03.png" alt="Martin photo">
+                                </div>
+                                <div class="autor__name">
+                                    <h4>Martin</h4>
+                                    <span>San Diego</span>
+                                </div>
+                            </div>
+                            <div class="testimonial__text">
+                                <p>
+                                    Perfectly known for its fabulous taste and food. Anywhere your hunger is satisfied.
+                                    They
+                                    give best fried chicken and burgers those are yummy.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-
-                <div class="testimonial__card">
-                    <div class="testimonial__autor autor">
-                        <div class="autor__photo">
-                            <img src="./assets/images/testimonial-autor-02.png" alt="Jack Sparrow photo">
-                        </div>
-                        <div class="autor__name">
-                            <h4>Jack Sparrow</h4>
-                            <span>Salt Lake City</span>
-                        </div>
-                    </div>
-                    <div class="testimonial__text">
-                        <p>
-                            I have visited this fantastic restaurant on several occasions, food is absolutely
-                            outstanding & attention to detail is in league of its own.
-                        </p>
-                    </div>
-                </div>
-
-
-                <div class="testimonial__card">
-                    <div class="testimonial__autor autor">
-                        <div class="autor__photo">
-                            <img src="./assets/images/testimonial-autor-03.png" alt="Martin photo">
-                        </div>
-                        <div class="autor__name">
-                            <h4>Martin</h4>
-                            <span>San Diego</span>
-                        </div>
-                    </div>
-                    <div class="testimonial__text">
-                        <p>
-                            Perfectly known for its fabulous taste and food. Anywhere your hunger is satisfied. They
-                            give best fried chicken and burgers those are yummy.
-                        </p>
-                    </div>
-                </div>
+                <button class="itc-slider-btn itc-slider-btn-prev"></button>
+                <button class="itc-slider-btn itc-slider-btn-next"></button>
             </div>
         </div>
         <div class="testimonial__img"></div>
@@ -493,7 +500,7 @@
                         <img src="./assets/images/blog-img-01.jpg" alt="pizza">
                         <button class="btn btn--color">View More</button>
                     </div>
-                    <div class="section-heading blog__text">
+                    <div class="blog__text">
                         <span class="section-heading__title">Delicious</span><span class="section-heading__title">March
                             19, 2022</span>
                         <h2>The Legend of US Cuisine: The Story of Hungry People</h2>
@@ -507,7 +514,7 @@
                         <img src="./assets/images/blog-img-02.jpg" alt="barbecue">
                         <button class="btn btn--color">View More</button>
                     </div>
-                    <div class="section-heading blog__text">
+                    <div class="blog__text">
                         <span class="section-heading__title">Cooking</span><span class="section-heading__title">March
                             19, 2022</span>
                         <h2>The Most Popular Delicious Food of Mediterranean Cuisine</h2>
@@ -544,8 +551,8 @@
             <img src="./assets/icons/logo.png" alt="logo" class="subscribe__logo">
             <p class="subscribe__text">Join our mailing list for updates, Get news & offers events.</p>
             <form action="#" class="subscribe__form">
-                <input class="subscribe__email" type="email" name="email" id="#" placeholder="Email" maxlength="30"><input
-                    type="submit" value="Subscribe" class="btn btn--submit subscribe__btn">
+                <input class="subscribe__email" type="email" name="email" id="#" placeholder="Email"
+                    maxlength="30"><input type="submit" value="Subscribe" class="btn btn--submit subscribe__btn">
             </form>
         </div>
     </section>
@@ -580,7 +587,7 @@
             </div>
         </div>
 
-        
+
 
     </footer>
 
@@ -603,7 +610,8 @@
 
 
 
-<script src="./script.js"></script>
+    <script src="./script.js"></script>
+    <script src="./itc-slider.js" defer></script>
 
 </body>
 
